--- a/source/MaterialXGenOsl/CMakeLists.txt
+++ b/source/MaterialXGenOsl/CMakeLists.txt
@@ -25,11 +25,11 @@ target_link_libraries(
     ${CMAKE_DL_LIBS})
 
 install(TARGETS MaterialXGenOsl
-    DESTINATION ${CMAKE_INSTALL_PREFIX}/lib/)
+    DESTINATION ${CMAKE_INSTALL_PREFIX}/MaterialX/lib/)
 
 install(DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/"
-    DESTINATION ${CMAKE_INSTALL_PREFIX}/include/MaterialXGenOsl/ MESSAGE_NEVER
+    DESTINATION ${CMAKE_INSTALL_PREFIX}/MaterialX/include/MaterialXGenOsl/ MESSAGE_NEVER
     FILES_MATCHING PATTERN "*.h*")
 
 install(FILES "${CMAKE_CURRENT_BINARY_DIR}/${CMAKE_BUILD_TYPE}/MaterialXGenOsl.pdb"
-    DESTINATION "${CMAKE_INSTALL_PREFIX}/lib/" OPTIONAL)
+    DESTINATION "${CMAKE_INSTALL_PREFIX}/MaterialX/lib/" OPTIONAL)
