--- a/source/MaterialXGenShader/CMakeLists.txt
+++ b/source/MaterialXGenShader/CMakeLists.txt
@@ -24,14 +24,14 @@ target_link_libraries(
     ${CMAKE_DL_LIBS})
 
 install(TARGETS MaterialXGenShader
-    DESTINATION ${CMAKE_INSTALL_PREFIX}/lib/)
+    DESTINATION ${CMAKE_INSTALL_PREFIX}/MaterialX/lib/)
 
 install(DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/"
-    DESTINATION ${CMAKE_INSTALL_PREFIX}/include/MaterialXGenShader/ MESSAGE_NEVER
+    DESTINATION ${CMAKE_INSTALL_PREFIX}/MaterialX/include/MaterialXGenShader/ MESSAGE_NEVER
     FILES_MATCHING PATTERN "*.h*")
 
 install(FILES "${CMAKE_CURRENT_BINARY_DIR}/${CMAKE_BUILD_TYPE}/MaterialXGenShader.pdb"
-    DESTINATION "${CMAKE_INSTALL_PREFIX}/lib/" OPTIONAL)
+    DESTINATION "${CMAKE_INSTALL_PREFIX}/MaterialX/lib/" OPTIONAL)
 
 install(DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/../../resources"
-    DESTINATION ${CMAKE_INSTALL_PREFIX} MESSAGE_NEVER)
+    DESTINATION ${CMAKE_INSTALL_PREFIX}/MaterialX MESSAGE_NEVER)
