--- a/source/MaterialXRenderGlsl/CMakeLists.txt
+++ b/source/MaterialXRenderGlsl/CMakeLists.txt
@@ -65,11 +65,11 @@ set_target_properties(
     SOVERSION "${MATERIALX_MAJOR_VERSION}")
 
 install(TARGETS MaterialXRenderGlsl
-    DESTINATION ${CMAKE_INSTALL_PREFIX}/lib/)
+    DESTINATION ${CMAKE_INSTALL_PREFIX}/MaterialX/lib/)
 
 install(DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/"
-    DESTINATION ${CMAKE_INSTALL_PREFIX}/include/MaterialXRenderGlsl/ MESSAGE_NEVER
+    DESTINATION ${CMAKE_INSTALL_PREFIX}/MaterialX/include/MaterialXRenderGlsl/ MESSAGE_NEVER
     FILES_MATCHING PATTERN "*.h*")
 
 install(FILES "${CMAKE_CURRENT_BINARY_DIR}/${CMAKE_BUILD_TYPE}/MaterialXRenderGlsl.pdb"
-    DESTINATION "${CMAKE_INSTALL_PREFIX}/lib/" OPTIONAL)
+    DESTINATION "${CMAKE_INSTALL_PREFIX}/MaterialX/lib/" OPTIONAL)
