--- a/libraries/CMakeLists.txt
+++ b/libraries/CMakeLists.txt
@@ -1,2 +1,2 @@
 install(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/
-        DESTINATION "${CMAKE_INSTALL_PREFIX}/libraries" MESSAGE_NEVER)
+        DESTINATION "${CMAKE_INSTALL_PREFIX}/MaterialX/libraries" MESSAGE_NEVER)
