--- a/source/MaterialXView/CMakeLists.txt
+++ b/source/MaterialXView/CMakeLists.txt
@@ -61,6 +61,6 @@ if(MATERIALX_BUILD_OIIO AND OPENIMAGEIO_ROOT_DIR)
 endif()
 
 install(TARGETS MaterialXView
-    DESTINATION ${CMAKE_INSTALL_PREFIX}/bin/)
+    DESTINATION ${CMAKE_INSTALL_PREFIX}/MaterialX/bin/)
 install(FILES "${CMAKE_CURRENT_BINARY_DIR}/${CMAKE_BUILD_TYPE}/MaterialXView.pdb"
-    DESTINATION "${CMAKE_INSTALL_PREFIX}/bin/" OPTIONAL)
+    DESTINATION "${CMAKE_INSTALL_PREFIX}/MaterialX/bin/" OPTIONAL)
