--- a/source/PyMaterialX/PyMaterialXGenGlsl/CMakeLists.txt
+++ b/source/PyMaterialX/PyMaterialXGenGlsl/CMakeLists.txt
@@ -23,4 +23,4 @@ target_link_libraries(
     PRIVATE ${CMAKE_DL_LIBS})
 
 install(TARGETS PyMaterialXGenGlsl
-        DESTINATION "${CMAKE_INSTALL_PREFIX}/python/MaterialX")
+        DESTINATION "${CMAKE_INSTALL_PREFIX}/MaterialX/python/MaterialX")
