--- a/source/PyMaterialX/PyMaterialXGenShader/CMakeLists.txt
+++ b/source/PyMaterialX/PyMaterialXGenShader/CMakeLists.txt
@@ -24,4 +24,4 @@ target_link_libraries(
     PRIVATE ${CMAKE_DL_LIBS})
 
 install(TARGETS PyMaterialXGenShader
-        DESTINATION "${CMAKE_INSTALL_PREFIX}/python/MaterialX")
+        DESTINATION "${CMAKE_INSTALL_PREFIX}/MaterialX/python/MaterialX")
