--- a/source/PyMaterialX/PyMaterialXRender/CMakeLists.txt
+++ b/source/PyMaterialX/PyMaterialXRender/CMakeLists.txt
@@ -26,4 +26,4 @@ target_link_libraries(
     PRIVATE ${CMAKE_DL_LIBS})
 
 install(TARGETS PyMaterialXRender
-        DESTINATION "${CMAKE_INSTALL_PREFIX}/python/MaterialX")
+        DESTINATION "${CMAKE_INSTALL_PREFIX}/MaterialX/python/MaterialX")
